feat: adding year to footer

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
         </main>
         <footer class="footer container">
             <div>
+                <p>2025</p>
+            </div>
+            <div>
                 <a href="https://rs.school/courses/javascript-preschool-ru">
                     <img src="./rs-school-logo.svg" alt="RS School logo" >
                 </a>
