feat:add new project

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#code_example">Code example</a></li>
-                    <li><a href="#contact_me">Contact me</a></li>
+                    <!-- <li><a href="#code_example">Code example</a></li>
+                    <li><a href="#contact_me">Contact me</a></li> -->
                 </ul>
             </nav>
         </header>
@@ -77,7 +77,7 @@
                 <h2>Education</h2>
                 <p><b>Web-developer</b></p>
                 <p>Yandex Practicum</p>
-                <p><b>Bacic JavaScript</b></p>
+                <p><b>Basic JavaScript</b></p>
                 <p>Result University</p>
                 <p><b>Master of Metallurgie</b></p>
                 <p>Ural State Technical University</p>
@@ -97,11 +97,12 @@
                         <li><a href="https://lomeshyza.github.io/Slider_UpDown/">Slider Up&Down</a></li>
                         <li><a href="https://lomeshyza.github.io/Gallery/">Gallery</a></li>
                         <li><a href="https://lomeshyza.github.io/notes/">Notes</a></li>
+                        <li><a href="https://lomeshyza.github.io/TypeScript_weather/">Weather</a></li>
                     </ul>
                 </div>
             </div>
             <p><a id="code_example"></a></p>
-            <div class="card bg-black">
+            <!-- <div class="card bg-black">
                 <h2>Code example</h2>
                 <pre>
                     export default function Game() {
@@ -136,7 +137,7 @@
                     </div>
                     <button class="btn" type="submit">Send</button>
                 </form>
-            </div>
+            </div> -->
         </main>
         <footer class="footer container">
             <div>
